[package]
name = "geohashed-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
relay_builder = { git = "https://github.com/verse-pbc/relay_builder", branch = "optimize-lock-usage" }
nostr-sdk = { git = "https://github.com/verse-pbc/nostr", features = ["all-nips"] }
nostr = { git = "https://github.com/verse-pbc/nostr", features = ["std"] }
nostr-lmdb = { git = "https://github.com/verse-pbc/nostr" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "http1"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
arc-swap = "1"

# Configuration
config = "0.14"
dotenv = "0.15"

# Monitoring
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Utilities
futures = "0.3"
once_cell = "1"
url = "2"

# Geohash
geohash = "0.13"

# Rate limiting
governor = "0.10"

[lib]
name = "geohashed_relay"
path = "src/lib.rs"

[[bin]]
name = "geohashed-relay"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
